fixed letter spacing

--- a/src/App.css
+++ b/src/App.css
@@ -181,6 +181,10 @@
   flex: 1;
 }
 
+.embedly-card a {
+  letter-spacing: 0.04em!important;
+}
+
 .embedly-card p {
   display: none;
 }
